--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mongoose-lean-virtuals",
   "version": "0.1.0",
@@ -26,8 +25,7 @@
     "acquit-markdown": "0.0.5",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
-    "mongoose": "git+ssh://git@github.com/Automattic/mongoose.git#4.11",
-    "underscore": "1.8.3"
+    "mongoose": "~4.11"
   },
   "peerDependencies": {
     "mongoose": "4.x"
