--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "mongodb"
   ],
   "devDependencies": {
-    "acquit": "0.4.1",
+    "acquit": "0.6.0",
     "acquit-ignore": "0.0.3",
     "acquit-markdown": "0.0.8",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
-    "mongoose": "~4.11"
+    "mongoose": ">=4.11.0"
   },
   "peerDependencies": {
-    "mongoose": "4.x"
+    "mongoose": ">=4.11.0"
   },
   "author": "Valeri Karpov <val@karpov.io>",
   "license": "Apache 2.0",
