--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "acquit-markdown": "0.0.8",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
-    "mongoose": ">=4.11.0"
+    "mongoose": "~5.0"
   },
   "peerDependencies": {
     "mongoose": ">=4.11.0"
