--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "mongodb"
   ],
   "devDependencies": {
-    "acquit": "0.6.0",
+    "acquit": "1.0.0",
     "acquit-ignore": "0.0.3",
-    "acquit-markdown": "0.0.8",
+    "acquit-markdown": "0.1.0",
     "istanbul": "0.4.5",
-    "mocha": "3.2.0",
+    "mocha": "5.x",
     "mongoose": "~5.0"
   },
   "peerDependencies": {
