docs: improve readme to be more minimal

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Attach virtuals to the results of mongoose queries when using `.lean()`",
   "main": "index.js",
   "scripts": {
-    "docs": "acquit-markdown -r acquit-ignore -p './test/examples.test.js' -h './HEADER.md' > README.md",
+    "docs": "acquit-markdown -r acquit-ignore -p './test/examples.test.js' > examples.md",
     "test": "mocha ./test/*.js",
     "test-integration": "mocha ./test/integration.js",
     "test-travis": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*"
@@ -16,7 +16,7 @@
   "keywords": [
     "mongoose",
     "lean",
-    "id",
+    "virtuals",
     "mongodb"
   ],
   "devDependencies": {
