--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "co": "4.6.0",
     "istanbul": "0.4.5",
     "mocha": "5.x",
-    "mongoose": "~5.0"
+    "mongoose": "^5.3.5"
   },
   "peerDependencies": {
     "mongoose": ">=4.11.0 || 5.x"
