--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongodb"
   ],
   "devDependencies": {
-    "acquit": "1.0.2",
+    "acquit": "1.x",
     "acquit-ignore": "0.1.0",
     "acquit-markdown": "0.1.0",
     "co": "4.6.0",
