feat: support virtuals in nested schemas
Fix #20

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "virtuals",
     "mongodb"
   ],
+  "dependencies": {
+    "mpath": "0.5.x"
+  },
   "devDependencies": {
     "acquit": "1.x",
     "acquit-ignore": "0.1.0",
