Correctly pass existing field value to applyGetters
Fixes #25

- Added test for this case (a getter function on a virtual in a lean query)
- Updated the mongoose peer dependency to the first version that has the fix to Automattic/mongoose#8775

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "mongoose": "5.x"
   },
   "peerDependencies": {
-    "mongoose": ">=4.11.0 || 5.x"
+    "mongoose": ">=5.9.9"
   },
   "author": "Valeri Karpov <val@karpov.io>",
   "license": "Apache 2.0",
