--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "6.8.0",
     "istanbul": "0.4.5",
     "mocha": "5.2.x",
-    "mongoose": "6.x"
+    "mongoose": "7.0.0-rc0"
   },
   "peerDependencies": {
     "mongoose": ">=5.11.10"
