--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "bugs": {
     "url": "https://github.com/vkarpov15/mongoose-lean-virtuals/issues"
   },
+  "engines": {
+    "node": ">=16.20.1"
+  },
   "homepage": "https://github.com/vkarpov15/mongoose-lean-virtuals",
   "eslintConfig": {
     "extends": [
