--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
       matrix:
         node: [22]
         os: [ubuntu-22.04]
-    name: Node ${{ matrix.node }} MongoDB ${{ matrix.mongo }}
+    name: TypeScript Test
     steps:
       - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v3
 
