--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         node: [16, 18, 20, 22]
-        os: [ubuntu-20.04]
-        include:
-          - os: ubuntu-20.04
-            mongo-os: ubuntu2004
-            mongo: 5.0.2
+        os: [ubuntu-24.04]
+        mongo: [7.0.12]
     name: Node ${{ matrix.node }} MongoDB ${{ matrix.mongo }}
     steps:
       - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v3
@@ -36,7 +33,7 @@ jobs:
           printf "\n--timeout 8000" >> ./test/mocha.opts
           ./mongodb-linux-x86_64-${{ matrix.mongo-os }}-${{ matrix.mongo }}/bin/mongod --setParameter ttlMonitorSleepSecs=1 --fork --dbpath ./data/db/27017 --syslog --port 27017
           sleep 2
-          mongod --version
+          ./mongodb-linux-x86_64-${{ matrix.mongo-os }}-${{ matrix.mongo }}/bin/mongod --version
           echo `pwd`/mongodb-linux-x86_64-${{ matrix.mongo-os }}-${{ matrix.mongo }}/bin >> $GITHUB_PATH
       - run: npm test
 
@@ -46,7 +43,7 @@ jobs:
       fail-fast: false
       matrix:
         node: [22]
-        os: [ubuntu-22.04]
+        os: [ubuntu-24.04]
     name: TypeScript Test
     steps:
       - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v3
