--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         node: [16, 18, 20, 22]
         os: [ubuntu-24.04]
+        mongo-os: [ubuntu2404]
         mongo: [7.0.12]
     name: Node ${{ matrix.node }} MongoDB ${{ matrix.mongo }}
     steps:
