--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,9 @@ jobs:
       fail-fast: false
       matrix:
         node: [16, 18, 20, 22]
-        os: [ubuntu-20.04]
-        include:
-          - os: ubuntu-20.04
-            mongo-os: ubuntu2004
-            mongo: 5.0.2
+        os: [ubuntu-22.04]
+        mongo-os: [ubuntu2204]
+        mongo: [7.0.12]
     name: Node ${{ matrix.node }} MongoDB ${{ matrix.mongo }}
     steps:
       - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v3
