--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vkarpov15/mongoose-lean-virtuals.git"
+    "url": "https://github.com/mongoosejs/mongoose-lean-virtuals.git"
   },
   "keywords": [
     "mongoose",
@@ -37,17 +37,17 @@
     "typescript": "5.x"
   },
   "peerDependencies": {
-    "mongoose": ">=8.0.0"
+    "mongoose": ">=8.0.0 || ^9.0.0-0"
   },
   "author": "Valeri Karpov <val@karpov.io>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/vkarpov15/mongoose-lean-virtuals/issues"
+    "url": "https://github.com/mongoosejs/mongoose-lean-virtuals/issues"
   },
   "engines": {
     "node": ">=16.20.1"
   },
-  "homepage": "https://github.com/vkarpov15/mongoose-lean-virtuals",
+  "homepage": "https://github.com/mongoosejs/mongoose-lean-virtuals",
   "eslintConfig": {
     "extends": [
       "eslint:recommended"
